# philosophers

./: .gdbinit  .gitignore  CMakeLists.txt  Makefile
include/: ft  philo.h  philo_defs.h
philo/: Makefile  exec.c  ft_get_time.c  ft_isctype.c  ft_itoa.c  ft_strlcat.c  ft_strlen.c  ft_strtoul.c  init.c  monitor.c  parse.c  philo.h  philo_defs.h  routine.c  status.c
src/: exec.c  init.c  main.c  monitor.c  parse.c  routine.c  status.c  utils.cc
src/utils/: ft_get_time.c  ft_isctype.c  ft_isctype2.c  ft_itoa.c  ft_mem.c  ft_memset.c  ft_perror.c  ft_strlen.c  ft_strtol.c  ft_strtoul.c
study/: main.c
